fix(toggle): 🐛 fixing issue with collapsing with long labels
affects: @dusk-network/toggle

--- a/packages/atoms/toggle/styles.css
+++ b/packages/atoms/toggle/styles.css
@@ -62,14 +62,14 @@
   }
 
   &__checkbox {
-    @apply appearance-none bg-white h-8 w-8 border border-gray-900 shadow-marketing rounded-md;
+    @apply flex-shrink-0 appearance-none bg-white h-8 w-8 border border-gray-900 shadow-marketing rounded-md;
     &:checked {
       background-image: url("./icons/checkbox.svg");
     }
   }
 
   &__radio {
-    @apply appearance-none bg-white h-8 w-8 border border-gray-900 shadow-marketing rounded-full;
+    @apply flex-shrink-0 appearance-none bg-white h-8 w-8 border border-gray-900 shadow-marketing rounded-full;
     &:checked {
       background-image: url("./icons/radio.svg");
     }
